--- a/app/src/main/res/layout/list_report_item_show.xml
+++ b/app/src/main/res/layout/list_report_item_show.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:background="@drawable/list_item_drawable"
-    android:paddingTop="12dp"
-    android:paddingBottom="12dp">
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:orientation="vertical"
+              android:background="@drawable/list_item_drawable"
+              android:paddingTop="12dp"
+              android:paddingBottom="12dp"
+              android:paddingLeft="16dp"
+              android:paddingRight="16dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:gravity="center_vertical"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp">
+        android:gravity="center_vertical">
 
         <TextView
             android:id="@+id/dateTextView"
@@ -57,9 +57,7 @@
         android:orientation="horizontal"
         android:gravity="bottom"
         android:baselineAligned="true"
-        android:layout_marginTop="3dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp">
+        android:layout_marginTop="3dp">
 
         <TextView
             android:id="@+id/symbolTextView"
