--- a/app/src/main/res/layout/activity_reim_edit.xml
+++ b/app/src/main/res/layout/activity_reim_edit.xml
@@ -254,8 +254,7 @@
             <RelativeLayout
                 android:id="@+id/countLayout"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:minHeight="56dp">
+                android:layout_height="56dp">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -282,13 +281,14 @@
                     android:inputType="number"
                     android:textCursorDrawable="@null"/>
 
-            </RelativeLayout>
+                <include
+                    android:layout_width="match_parent"
+                    android:layout_height="0.5dp"
+                    android:layout_alignParentBottom="true"
+                    android:layout_marginLeft="80dp"
+                    layout="@layout/view_divider"/>
 
-            <include
-                android:layout_width="match_parent"
-                android:layout_height="0.5dp"
-                android:layout_marginLeft="80dp"
-                layout="@layout/view_divider"/>
+            </RelativeLayout>
 
             <RelativeLayout
                 android:layout_width="match_parent"
