--- a/app/src/main/res/layout/activity_reim_show.xml
+++ b/app/src/main/res/layout/activity_reim_show.xml
@@ -220,8 +220,7 @@
             <RelativeLayout
                 android:id="@+id/countLayout"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:minHeight="56dp">
+                android:layout_height="56dp">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -242,20 +241,20 @@
                     android:paddingTop="16dp"
                     android:paddingBottom="16dp"
                     android:paddingRight="16dp"
-                    android:background="@null"
-                    android:hint="@string/input_count"
+                    android:ellipsize="end"
+                    android:singleLine="true"
                     android:textColor="@color/font_major_dark"
                     android:textSize="18sp"
-                    android:inputType="phone"
                     android:textCursorDrawable="@null"/>
 
-            </RelativeLayout>
+                <include
+                    android:layout_width="match_parent"
+                    android:layout_height="0.5dp"
+                    android:layout_alignParentBottom="true"
+                    android:layout_marginLeft="80dp"
+                    layout="@layout/view_divider"/>
 
-            <include
-                android:layout_width="match_parent"
-                android:layout_height="0.5dp"
-                android:layout_marginLeft="80dp"
-                layout="@layout/view_divider"/>
+            </RelativeLayout>
 
             <RelativeLayout
                 android:layout_width="match_parent"
