--- a/app/src/main/res/layout/list_report.xml
+++ b/app/src/main/res/layout/list_report.xml
@@ -62,8 +62,10 @@
 
         <TextView
             android:id="@+id/dateTextView"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="right"
             android:ellipsize="end"
             android:singleLine="true"
             android:textColor="@color/hint_light_grey"
